--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
+    "@cypress/react": "^9.0.0",
     "@eslint/js": "^9.21.0",
     "@storybook/addon-essentials": "^8.6.2",
     "@storybook/addon-interactions": "^8.6.3",
@@ -30,6 +33,7 @@
     "@storybook/test": "^8.6.2",
     "@storybook/test-runner": "^0.22.0",
     "@storybook/testing-library": "^0.2.1",
+    "@testing-library/cypress": "^10.0.3",
     "@types/cypress": "^0.1.6",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
