--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,5 +1,6 @@
-name: Cypress Tests
+name: Cypress Component Tests
 on: [push]
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -7,16 +8,21 @@ jobs:
       fail-fast: false
       matrix:
         containers: [1, 2]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          start: npm start
-          wait-on: 'http://localhost:6006'
-          record: true
-          parallel: true 
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Start Storybook
+        run: npm run storybook &
+
+      - name: Wait for Storybook to be ready
+        run: npx wait-on http://localhost:6006
+
+      - name: Run Cypress Component tests
+        run: npx cypress run --component --spec "src/**/*.{cy.ts,cy.tsx}"
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
