--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
     "@cypress/react": "^9.0.0",
+    "@cypress/vite-dev-server": "^6.0.2",
     "@eslint/js": "^9.21.0",
     "@storybook/addon-essentials": "^8.6.2",
     "@storybook/addon-interactions": "^8.6.3",
@@ -38,11 +39,13 @@
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
     "cypress": "^14.1.0",
     "eslint": "^9.21.0",
+    "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.11.3",
